@@ -5,3 +5,4 @@
 *~
 *.swp
 *.swo
+*.tgz
