@@ -36,11 +36,13 @@ run = mv tmp/Changes Changes
 [GatherDir]
 [Prereqs]
 Markdent = 0
+Dancer2 = 0.206000
 [AutoPrereqs]
 [PruneCruft]
 [PruneFiles]
 ;filename = weaver.ini
 filename = README.mkdn
+filename = test.tar.gz
 ;filename = dist.ini
 filename = .gitignore
 [ManifestSkip]
